--- a/index.html
+++ b/index.html
@@ -592,18 +592,6 @@
                 <tbody>
                   <tr>
                       <td>
-                          <strong> Good Vibrations: Can a Digital Nudge Reduce Digital Overload? </strong> <a href="http://www.nixdell.com/papers/vibrations.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
-                          OKEKE, F., SOBOLEV, M., Dell, N., ESTRIN, D.<i> International Conference on Human-Computer Interaction with Mobile Devices and Services (MobileHCI 2018). </i> September 2018
-                      </td>
-                  </tr>
-                  <tr>
-                      <td>
-                          <strong> An mHealth App for Self-Management of Chronic Lower Back Pain (Limbr): Pilot Study.</strong> <a href="https://mhealth.jmir.org/2018/9/e179/" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
-                          SELTER, A., TSANGOURI, C., ALI, S., FREED, D., VATCHINSKY, A., KIZER, J., SAHUGUET, A., VOJTA, D., VAD, V., POLLAK, J., ESTRIN, D.<i> JMIR Mhealth Uhealth 2018</i> September 2017
-                      </td>
-                  </tr>
-                  <tr>
-                      <td>
                           <strong> Unbiased Offline Recommender Evaluation for Missing-Not-At-Random Implicit Feedback.</strong> <a href="http://www.cs.cornell.edu/~ylongqi/paper/YangCXWBE18.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
                           YANG, L., CUI, Y., XUAN, Y., WANG, C., BELONGIE, S., ESTRIN, D.<i> In Twelfth ACM Conference on Recommender Systems (RecSys ’18)</i> October 2018
                       </td>
@@ -622,14 +610,20 @@
                   </tr>
                   <tr>
                       <td>
-                          <strong> Open mHealth: Common Data Schemas and API for Mobile Health Data.</strong> <a href="" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
-                          CARINI, S., FARRUGIA, E., HADDAD, D., ESTRIN, D., KUMAR, S., SIM, I.
+                          <strong> Good Vibrations: Can a Digital Nudge Reduce Digital Overload? </strong> <a href="http://www.nixdell.com/papers/vibrations.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
+                          OKEKE, F., SOBOLEV, M., Dell, N., ESTRIN, D.<i> International Conference on Human-Computer Interaction with Mobile Devices and Services (MobileHCI 2018). </i> September 2018
+                      </td>
+                  </tr>
+                  <tr>
+                      <td>
+                          <strong> An mHealth App for Self-Management of Chronic Lower Back Pain (Limbr): Pilot Study.</strong> <a href="https://mhealth.jmir.org/2018/9/e179/" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
+                          SELTER, A., TSANGOURI, C., ALI, S., FREED, D., VATCHINSKY, A., KIZER, J., SAHUGUET, A., VOJTA, D., VAD, V., POLLAK, J., ESTRIN, D.<i> JMIR Mhealth Uhealth</i> September 2018
                       </td>
                   </tr>
                   <tr>
                       <td>
                           <strong> Characterizing User Skills from Application Usage Traces with Hierarchical Attention Recurrent Networks.</strong> <a href="" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
-                          YANG, L., FANG, C., JIN, H., HOFFMAN, M.D., ESTRIN, D.<i> ACM Transactions on Intelligent Systems and Technology (TIST)</i>
+                          YANG, L., FANG, C., JIN, H., HOFFMAN, M.D., ESTRIN, D.<i> ACM Transactions on Intelligent Systems and Technology (TIST)</i> June 2018
                       </td>
                   </tr>
                     <tr>
@@ -653,17 +647,14 @@
                     <tr>
                         <td>
                             <strong>OpenRec: A Modular Framework for Extensible Recommendation Algorithms. <a href="http://www.cs.cornell.edu/~ylongqi/paper/YangBGHE18.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
-                            YANG, L., BAGDASARYAN, E., GRUENSTEIN, J., HSIEH, C., ESTRIN, D.  <i>Proceedings of the 11th ACM International Conference on Web Search and Data Mining <strong>(WSDM)</strong>, 2018.</i><a href="http://openrec.ai" style="color:black"> openrec.ai</a>
+                            YANG, L., BAGDASARYAN, E., GRUENSTEIN, J., HSIEH, C., ESTRIN, D.  <i>Proceedings of the 11th ACM International Conference on Web Search and Data Mining <strong>(WSDM)</strong>, Feburary 2018.</i><a href="http://openrec.ai" style="color:black"> openrec.ai</a>
 
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <strong>Yum-me: A Personalized Nutrient-based Meal Recommender System. <a href="http://www.cs.cornell.edu/~ylongqi/paper/YangYumme.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong>
-                            </br>
-                            YANG, L., HSIEH, C., YANG, H., POLLAK, JP, DELL, N., Belongie, S., COLE, C.,  ESTRIN, D.,
-
-                            <i>ACM Transactions on Information Systems <strong> (TOIS)</strong>,</i>
+                          </br>YANG, L., HSIEH, C., YANG, H., POLLAK, JP, DELL, N., Belongie, S., COLE, C.,  ESTRIN, D., <i>ACM Transactions on Information Systems <strong> (TOIS)</strong>,</i> August 2017
                             2017
 
                         </td>
@@ -728,7 +719,7 @@
                         <td>
                             <strong>GroupLink: Group Event Recommendations Using Personal Digital Traces. </strong><a href="http://www.cs.cornell.edu/~ylongqi/paper/WeiYHE16.pdf" style="color:darkblue"><strong>[PDF]</strong></a>
                             </br>
-                            Wei, H., Hsieh, C., Yang, L., Estrin, D., <i>In the 19th ACM Conference on Computer Supported Cooperative Work and Social Computing <strong>(CSCW’16)</strong>, 2016</i>
+                            Wei, H., Hsieh, C., Yang, L., Estrin, D., <i>In the 19th ACM Conference on Computer Supported Cooperative Work and Social Computing <strong>(CSCW’16)</strong>, March 2016</i>
 
 
                         </td>
@@ -737,7 +728,7 @@
                         <td>
                             <strong>Reassembling Our Digital Selves. </strong><a href="http://www.mitpressjournals.org/toc/daed/145/1" style="color:darkblue"><strong>[PDF]</strong></a>
                             </br>
-                            ESTRIN, D. AND JUELS, A. 2016 Winter. <i> Daedalus, 145, 1 , 43-53 (doi: 10.1162/DAED_a_00364).</i>
+                            ESTRIN, D. AND JUELS, A. <i> Daedalus, 145, 1 , 43-53 (doi: 10.1162/DAED_a_00364).</i> January 2016
 
                         </td>
                     </tr>
@@ -763,7 +754,7 @@
                         <td>
                             <strong>Beyond Classification: Latent User Interests Profiling from Visual Contents Analysis. </strong><a href="https://www.researchgate.net/profile/Deborah_Estrin2/publication/287853531_Beyond_Classification_Latent_User_Interests_Profiling_from_Visual_Contents_Analysis/links/58974f8e4585158bf6f59845/Beyond-Classification-Latent-User-Interests-Profiling-from-Visual-Contents-Analysis.pdf" style="color:darkblue"><strong>[PDF]</strong></a>
                             </br>
-                            YANG, L., HSIEH, C. AND ESTRIN, D., <i>In Proceedings of Data Mining Workshop <strong>(ICDMW)</strong>, IEEE International Conference. 2015</i>
+                            YANG, L., HSIEH, C. AND ESTRIN, D., <i>In Proceedings of Data Mining Workshop <strong>(ICDMW)</strong>, IEEE International Conference.</i> November 2015
 
                         </td>
                     </tr>
@@ -779,7 +770,7 @@
                         <td>
                             <strong>small data, where n=me. </strong><a href="" style="color:darkblue"><strong>[PDF]</strong></a>
                             </br>
-                            ESTRIN, D. 2014. <i> CACM, Viewpoint Column, Communications of the ACM, 57, 4, 32-34.</i>
+                            ESTRIN, D. <i> CACM, Viewpoint Column, Communications of the ACM, 57, 4, 32-34.</i> April 2014
 
                         </td>
                     </tr>
@@ -787,7 +778,7 @@
                         <td>
                             <strong>The Email Analysis Framework: Aiding the analysis of personal natural language texts. </strong> <a href="http://ceur-ws.org/Vol-1210/LQS_02.pdf" style="color:darkblue"><strong>[PDF]</strong></a>
                             </br>
-                            ALQUADDOOMI, F., KETCHAM, C. and ESTRIN, D. <i> In Workshop on Linking The Quantified Self <strong>(LinkQS)</strong>, Santiago, Chile, 2014</i>
+                            ALQUADDOOMI, F., KETCHAM, C. and ESTRIN, D. <i> In Workshop on Linking The Quantified Self <strong>(LinkQS)</strong>, Santiago, Chile,</i> September 2014
 
 
                         </td>
