--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
                       <li class="timeline-inverted">
                           <div class="timeline-image">
-                              <img class="img-circle img-responsive" src="img/about/openreclogo2.png" alt="">
+                              <img class="img-circle img-responsive" src="img/about/macArthur.png" alt="">
                           </div>
                           <div class="timeline-panel">
                               <div class="timeline-heading">
