updated michaels link

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <a href="http://michaelsobolev.com"><img src="img/team/Michael.png" class="img-responsive img-circle" alt=""></a>
+                        <a href="https://twitter.com/sobolevmic"><img src="img/team/Michael.png" class="img-responsive img-circle" alt=""></a>
                         <h4>Michael Sobolev</h4>
                         <p class="text-muted">Chief Scientist</p>
 
