--- a/index.html
+++ b/index.html
@@ -609,6 +609,13 @@
                 <!--</thead>-->
 
                 <tbody>
+                  <li> <b> </a> </b> <i>,</i> October 2018.</li>
+                  <tr>
+                      <td>
+                          <strong>  More than Just Words: Modeling Non-textual Characteristics of Podcasts. </strong> <a href="https://www.cs.cornell.edu/~ylongqi/publication/wsdm19/" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
+                          YANG, L., WANG, Y., DUNNE, D. SOBOLEV, M., NAAMAN, M., C., ESTRIN, D.<i>  In Twelfth ACM Conference on Web Search and Data Mining (WSDM’19),</i> October 2018
+                      </td>
+                  </tr>
                   <tr>
                       <td>
                           <strong>  Understanding User Interactions with Podcast Recommendations Delivered Via Voice.</strong> <a href="http://www.cs.cornell.edu/~ylongqi/paper/YangSTE18.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
