--- a/index.html
+++ b/index.html
@@ -504,8 +504,8 @@
                 <div class="col-sm-3">
                     <div class="team-member">
 
-                        <a href=""><img src="img/team/yasmeen.png" class="img-responsive img-circle" alt=""></a>
-                        <h4>Yasmeen Hassan</h4>
+                        <a href=""><img src="img/team/Pargol.png" class="img-responsive img-circle" alt=""></a>
+                        <h4>Pargol </h4>
                         <p class="text-muted">Intern</p>
 
                     </div>
