--- a/index.html
+++ b/index.html
@@ -609,7 +609,12 @@
                 <!--</thead>-->
 
                 <tbody>
-       
+                  <tr>
+                      <td>
+                          <strong>  Mobile Health Technologies for Older Adults with Cardiovascular Disease: Current Evidence and Future Directions. </strong> <a href="https://doi.org/10.1007/s13670-019-0270-8" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
+                          SEARCY, R., SUMMAPUND, J., ESTRIN, D., POLLAK, JP, SCHOENTHALER, A., TROXEL, A., DODSON, J.A.,<i>  Current Geriatrics Reports (2019),</i> January 2019
+                      </td>
+                  </tr>
                   <tr>
                       <td>
                           <strong>  More than Just Words: Modeling Non-textual Characteristics of Podcasts. </strong> <a href="https://www.cs.cornell.edu/~ylongqi/publication/wsdm19/" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
