--- a/index.html
+++ b/index.html
@@ -315,85 +315,89 @@
                         </div>
                     </li>
 
-                    <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/portfolio/award.png" alt="">
-                        </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
+                    <!--<li class="timeline-inverted">-->
+                        <!--<div class="timeline-image">-->
+                            <!--<img class="img-circle img-responsive" src="img/portfolio/award.png" alt="">-->
+                        <!--</div>-->
+                        <!--<div class="timeline-panel">-->
+                            <!--<div class="timeline-heading">-->
 
-                                <h4 class="subheading"><a style="color: black" href="https://tech.cornell.edu/news/cornell-tech-professor-of-computer-science-named-2017-ieee-internet-award"> Deborah
-                                    Estrin named 2017 IEEE Internet Award Recipient</a></h4>
-                                <h6>Deborah Estrin</h6>
-                                CornellTech Website, June, 2016
-                                <!--Cornell Tech Website, June, 2017-->
-                            </div>
-                            <div class="timeline-body">
-                                <p class="text-muted">Deborah Estrin, Professor of Computer Science at Cornell Tech and Professor of Public Health at Weill Cornell, has been named the 2017 IEEE
-                                    Internet Award Recipient. Sponsored by the Nokia Corporation, the award is given for exceptional contributions to the advancement of Internet technology.
-                                    Specifically, Estrin was selected for “formative contributions and thought leadership in Internet routing and in mobile sensing techniques and applications, from
-                                    environmental monitoring to personal and community health.” IEEE is the world’s largest technical professional organization dedicated to advancing technology for
-                                    the benefit of humanity.</p>
+                                <!--<h4 class="subheading"><a style="color: black" href="https://tech.cornell.edu/news/cornell-tech-professor-of-computer-science-named-2017-ieee-internet-award"> Deborah-->
+                                    <!--Estrin named 2017 IEEE Internet Award Recipient</a></h4>-->
+                                <!--<h6>Deborah Estrin</h6>-->
+                                <!--CornellTech Website, June, 2016-->
+                                <!--&lt;!&ndash;Cornell Tech Website, June, 2017&ndash;&gt;-->
+                            <!--</div>-->
+                            <!--<div class="timeline-body">-->
+                                <!--<p class="text-muted">Deborah Estrin, Professor of Computer Science at Cornell Tech and Professor of Public Health at Weill Cornell, has been named the 2017 IEEE-->
+                                    <!--Internet Award Recipient. Sponsored by the Nokia Corporation, the award is given for exceptional contributions to the advancement of Internet technology.-->
+                                    <!--Specifically, Estrin was selected for “formative contributions and thought leadership in Internet routing and in mobile sensing techniques and applications, from-->
+                                    <!--environmental monitoring to personal and community health.” IEEE is the world’s largest technical professional organization dedicated to advancing technology for-->
+                                    <!--the benefit of humanity.</p>-->
 
-                            </div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/immerse.png" alt="">
-                        </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</li>-->
 
-                                <h4 class="subheading"><a style="color: black" href="https://tech.cornell.edu/news/aol-cornell-tech-connected-experiences-lab-pioneers-immersive-recommendatio">AOL-Cornell
-                                    Tech Connected Experiences Lab Pioneers Immersive Recommendations Technology</a></h4>
-                                <h6>small data lab</h6>
-                                CornellTech Website, April, 2016
-                            </div>
-                            <div class="timeline-body">
-                                <p class="text-muted">The Jacobs Technion-Cornell Institute at Cornell Tech and AOL today announced a research technology called “Immersive Recommendations,” a concept
-                                    where a user opts in to a tool that translates personal digital traces from one platform into content recommendations in another. The new technique was developed by
-                                    Cornell Tech researchers to address “the cold-start problem” — how to engage users with relevant content when they first start using a platform. As an example,
-                                    could a service like Netflix suggest better movies for a first-time user, if it tapped into their Twitter data? Could Meetup.com use your Medium posts to tailor
-                                    events for you? Researchers will present the the new paper at the 25th International World Wide Web Conference in Montreal, Canada.</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/nme.png" alt="">
-                        </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
 
-                                <h4 class="subheading"><a style="color: black" href="https://cacm.acm.org/magazines/2014/4/173218-small-data-where-n-me/fulltext"> small data, where n = me</a></h4>
-                                <h6>Deborah Estrin</h6>Communications of the ACM 2014
-                            </div>
-                            <div class="timeline-body">
-                                <p class="text-muted">We hear a lot about how big data, smart devices, and all the '-omics' (for example, genomics, proteomics, metabolomics, and so forth) are going to
-                                    transform medicine—and they will. But there is another force that is going to change the way we think about and practice health, and that is our small data—small
-                                    data derived from our individual digital traces.</p>
-                            </div>
-                        </div>
-                    </li>
+                    <a class="twitter-timeline" data-lang="en" data-width="70%" data-height="800" data-theme="light" href="https://twitter.com/sdlcornelltech?ref_src=twsrc%5Etfw">Tweets by sdlcornelltech</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-                    <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/ted.png" alt="">
-                        </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4 class="subheading"><a style="color: black;" href="http://www.tedmed.com/talks/show?id=17762">What happens when each patient becomes their own “universe” of unique
-                                    medical data?</a></h4>
-                                <h6 class="subheading">Deborah Estrin</h6>TEDMED 2013
-                            </div>
-                            <div class="timeline-body">
-                                <p class="text-muted">We leave a trail of digital data breadcrumbs as we go about our days. With access and good apps, we could make sense of this "small data" to help
-                                    get a clearer picture of our personal health. Deborah Estrin, networked sensing pioneer, Professor of Computer Science at the new Cornell Tech campus in New York
-                                    City and co-founder of the non-profit startup, Open mHealth, explains at TEDMED 2013.</p>
-                            </div>
-                        </div>
-                    </li>
+                    <!--<li class="timeline-inverted">-->
+                        <!--<div class="timeline-image">-->
+                            <!--<img class="img-circle img-responsive" src="img/about/immerse.png" alt="">-->
+                        <!--</div>-->
+                        <!--<div class="timeline-panel">-->
+                            <!--<div class="timeline-heading">-->
+
+                                <!--<h4 class="subheading"><a style="color: black" href="https://tech.cornell.edu/news/aol-cornell-tech-connected-experiences-lab-pioneers-immersive-recommendatio">AOL-Cornell-->
+                                    <!--Tech Connected Experiences Lab Pioneers Immersive Recommendations Technology</a></h4>-->
+                                <!--<h6>small data lab</h6>-->
+                                <!--CornellTech Website, April, 2016-->
+                            <!--</div>-->
+                            <!--<div class="timeline-body">-->
+                                <!--<p class="text-muted">The Jacobs Technion-Cornell Institute at Cornell Tech and AOL today announced a research technology called “Immersive Recommendations,” a concept-->
+                                    <!--where a user opts in to a tool that translates personal digital traces from one platform into content recommendations in another. The new technique was developed by-->
+                                    <!--Cornell Tech researchers to address “the cold-start problem” — how to engage users with relevant content when they first start using a platform. As an example,-->
+                                    <!--could a service like Netflix suggest better movies for a first-time user, if it tapped into their Twitter data? Could Meetup.com use your Medium posts to tailor-->
+                                    <!--events for you? Researchers will present the the new paper at the 25th International World Wide Web Conference in Montreal, Canada.</p>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</li>-->
+                    <!--<li class="timeline-inverted">-->
+                        <!--<div class="timeline-image">-->
+                            <!--<img class="img-circle img-responsive" src="img/about/nme.png" alt="">-->
+                        <!--</div>-->
+                        <!--<div class="timeline-panel">-->
+                            <!--<div class="timeline-heading">-->
+
+                                <!--<h4 class="subheading"><a style="color: black" href="https://cacm.acm.org/magazines/2014/4/173218-small-data-where-n-me/fulltext"> small data, where n = me</a></h4>-->
+                                <!--<h6>Deborah Estrin</h6>Communications of the ACM 2014-->
+                            <!--</div>-->
+                            <!--<div class="timeline-body">-->
+                                <!--<p class="text-muted">We hear a lot about how big data, smart devices, and all the '-omics' (for example, genomics, proteomics, metabolomics, and so forth) are going to-->
+                                    <!--transform medicine—and they will. But there is another force that is going to change the way we think about and practice health, and that is our small data—small-->
+                                    <!--data derived from our individual digital traces.</p>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</li>-->
+
+                    <!--<li class="timeline-inverted">-->
+                        <!--<div class="timeline-image">-->
+                            <!--<img class="img-circle img-responsive" src="img/about/ted.png" alt="">-->
+                        <!--</div>-->
+                        <!--<div class="timeline-panel">-->
+                            <!--<div class="timeline-heading">-->
+                                <!--<h4 class="subheading"><a style="color: black;" href="http://www.tedmed.com/talks/show?id=17762">What happens when each patient becomes their own “universe” of unique-->
+                                    <!--medical data?</a></h4>-->
+                                <!--<h6 class="subheading">Deborah Estrin</h6>TEDMED 2013-->
+                            <!--</div>-->
+                            <!--<div class="timeline-body">-->
+                                <!--<p class="text-muted">We leave a trail of digital data breadcrumbs as we go about our days. With access and good apps, we could make sense of this "small data" to help-->
+                                    <!--get a clearer picture of our personal health. Deborah Estrin, networked sensing pioneer, Professor of Computer Science at the new Cornell Tech campus in New York-->
+                                    <!--City and co-founder of the non-profit startup, Open mHealth, explains at TEDMED 2013.</p>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</li>-->
 
 
                     <!--<li class="timeline-inverted">-->
