--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-8">
                 <ul class="timeline">
 
                     <li class="timeline-inverted">
@@ -340,7 +340,7 @@
                     <!--</li>-->
 
 
-                    <a class="twitter-timeline" data-lang="en" data-width="70%" data-height="800" data-theme="light" href="https://twitter.com/sdlcornelltech?ref_src=twsrc%5Etfw">Tweets by sdlcornelltech</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 
                     <!--<li class="timeline-inverted">-->
                         <!--<div class="timeline-image">-->
@@ -409,6 +409,9 @@
                     <!--</li>-->
                 </ul>
             </div>
+            <div class="col-lg-4 col-sm-10">
+                        <a class="twitter-timeline" data-lang="en" data-height="800" data-theme="light" href="https://twitter.com/sdlcornelltech?ref_src=twsrc%5Etfw">Tweets by sdlcornelltech</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </div>
         </div>
     </div>
 </section>
